Fri Jul 11 02:15:12 1997  James C Hu  <jxh@lambada.cs.wustl.edu>

	* server/IO.cpp (JAWS_Synch_IO::transmit_file): Changed to use
	  writev () instead of multiple send ()s.

Thu Jul 10 01:53:48 1997  James C Hu  <jxh@lambada.cs.wustl.edu>

	* server/HTTP_Helpers.{h,cpp}: Changed so that creating the date
	  header is less expensive.

	* server/HTTP_Response.cpp: Changes to match above.

	* clients/Caching/README: Added to the repository.

	* clients/Caching/http_handler.{h,cpp}: Added some comments to the
	  code.  Also, moved the code to check to see if the file is in
	  cache already into the connector, so that a connect is not
	  done if the file is cached.  This required a filename ()
	  accessor method to be added to the handler.

Wed Jul  9 13:08:00 1997  James C Hu  <jxh@lambada.cs.wustl.edu>

	* clients/Caching/http_handler.cpp (svc): Added code to check to
	  see if the file is already cached before trying to cache it.

	* clients/Caching/http_client.cpp (main): Added a comment block at
	  the top of the file.

	* server/HTTP_Handler.cpp and IO.cpp: Changes that were needed
	  since JAWS_File is now integrated into ACE (as ACE_Filecache).

	* server/HTTP_Server.*: Attempting to track down memory leak.
	  This code may be in a state a flux for the next week or so.

Mon Jul  7 23:40:13 1997  Nanbor Wang  <nw1@cumbia.cs.wustl.edu>

	* clients/WebSTONE/src/webclient.c: Removed a bunch of THREAD
	  storage class decorators from function makeload() because auto
 	  variables can't be declared as TSS.  Also #ifdef random number
 	  generation code so it uses rand_r on Solaris() and rand() on NT.

	* clients/WebSTONE/src/rexec.c: Modified prototypes for
	  PassOutputThread() and PassErrorThread() to avoid warnings from
	  MSVC.  Still need more refinement on this one. ;(

	* clients/WebSTONE/src/webmaster.c: Added prototype for
	  HostEntCpy() and a null statement to avoid warning from MSVC.

	* clients/WebSTONE/src/gendata/genrand.mak: 